initial slop of cast feature
Cast feature slopped to contract with scaffolding for initial player/controller features.
